--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     }
   },
   "dependencies": {
-    "source-map-support": "^0.5.16"
+    "knex": "^0.20.8",
+    "source-map-support": "^0.5.16",
+    "sqlite3": "^4.1.1",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   }
 }
