--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "electron": "^7.1.10",
     "electron-builder": "^22.3.2",
+    "electron-rebuild": "^1.10.0",
     "electron-webpack": "^2.7.4",
     "webpack": "^4.41.5"
   },
