--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
     "vue-router": "^3.1.5",
+    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.2"
   }
 }
