--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "sample elctron app",
   "homepage": "https://github.com/sombriks/vendi",
   "main": "index.js",
-  "keywords": ["electron","webpack"],
+  "keywords": [
+    "electron",
+    "webpack"
+  ],
   "author": "sombriks <sombriks@gmail.com>",
   "scripts": {
     "clean": "rm -rf dist",
